--- a/app/views/types/show.html.erb
+++ b/app/views/types/show.html.erb
@@ -1,4 +1,4 @@
-<h2> Type </h2>
+<h2> Type Show </h2>
 <p>
   id: <%= @type.id %>
 </p>
@@ -8,7 +8,7 @@
   <%= @type.name %>
 </p>
 
-<%= link_to 'Edit test', edit_type_path(@type) %>
+<%= link_to 'Edit type', edit_type_path(@type) %>
 
 <br>
 <p>
