--- a/app/views/dates_holidays/_form.html.erb
+++ b/app/views/dates_holidays/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @holiday, local: true do |form| %>
+<%= form_with model: @dates_holiday, local: true do |form| %>
   <p>
     <%= 'Day: ' %>
     <%= form.text_field :day %>
