fixed errors in people resource

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -4,12 +4,12 @@
 </p>
 
 <p>
-  Name person:
+  Name:
   <%= @person.name %>
 </p>
 
 <p>
-  Email person:
+  Email:
   <%= @person.email %>
 </p>
 
