--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,13 +1,13 @@
 <%= form_with model: @person, local: true do |form| %>
 
   <p>
-    <%= 'Name: ' %>:
-    <%= form.label :name %>:
+    <%= 'Name: ' %>
+    <%= form.text_field :name %>
   </p>
 
   <p>
-    <%= 'Email: ' %>:
-    <%= form.text_field :name %>
+    <%= 'Email: ' %>
+    <%= form.text_field :email %>
   </p>
 
   <br>
