Corrected form Update Holiday

--- a/app/views/dates_holidays/edit.html.erb
+++ b/app/views/dates_holidays/edit.html.erb
@@ -2,4 +2,7 @@
 <%= render 'form' %>
 <p>
   <%= link_to 'Back to all dates holidays', dates_holiday_path %>
+</p><br>
+<p>
+  <%= link_to 'Back to all Holidays', holidays_path %>
 </p>
