--- a/app/views/holidays/_holiday.html.erb
+++ b/app/views/holidays/_holiday.html.erb
@@ -12,7 +12,7 @@
     <%= link_to 'show', holiday_path(holiday) %>
   </td>
   <td>
-    <%= link_to 'edit', edit_holiday_path(holiday) %>
+    <%= link_to 'edit', edit_holiday_path(holiday.id) %>
   </td>
   <td>
     <%= link_to 'delete', holiday_path(holiday),
