--- a/app/views/dates_holidays/_form.html.erb
+++ b/app/views/dates_holidays/_form.html.erb
@@ -13,7 +13,7 @@
     <%= form.text_field :year %>
   </p>
   <p>
-    <%= 'Holiday: ' %>:
+    <%= 'Holiday: ' %>
     <%= form.collection_select :holiday_id, Holiday.all, :id, :name, prompt: 'Select holiday' %>
   </p>
   <br>
