--- a/app/views/dates_holidays/index.html.erb
+++ b/app/views/dates_holidays/index.html.erb
@@ -1,7 +1,7 @@
   <div>
     <h1>Dates Holidays</h1>
 
-    <p> <%= link_to 'New Date Holiday', new_dates_holiday_path %> </p>
+    <p> <%= link_to 'New Date Holiday', new_holiday_dates_holiday_path %> </p>
 
       <% if @dates_holidays.present? %>
         <table>
@@ -23,4 +23,8 @@
       <% end %>
     <br>
   </div>
+  <br>
+<p>
+  <%= link_to 'Back to all Holidays', holidays_path %>
+</p>
 
