--- a/app/views/dates_holidays/new.html.erb
+++ b/app/views/dates_holidays/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Date Holiday New </h1>
-<%= render 'form' %>
+  <%= render 'form' %>
 <br>
 <p>
-  <%= link_to 'Back to all Dates holidays', dates_holidays_path %>
+  <%= link_to 'Back to all Dates holidays', dates_holiday_path(@dates_holiday) %>
 </p>
 
