--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -2,4 +2,10 @@
 <%= render 'form' %>
 <p>
   <%= link_to 'Back to all holidays', holiday_path %>
-</p>
+</p><br>
+<!-- <ol>
+  <%#= render @holiday.dates_holidays  %>
+</ol>
+ -->
+ <%= render 'dates_holidays/list_dates_holidays', holiday: @holiday  %>
+
