--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,5 +1,5 @@
 <h1> Edit Company </h1>
 <%= render 'form' %>
 <p>
-  <%= link_to 'Back to all companies', company_path %>
+  <%= link_to 'Back to all companies', companies_path %>
 </p>
