--- a/app/views/dates_holidays/show.html.erb
+++ b/app/views/dates_holidays/show.html.erb
@@ -23,7 +23,7 @@
 <br>
 
 <p>
-  <%= link_to 'Back to all Dates holidays', holiday_dates_holidays_path(@dates_holiday) %>
+  <%#= link_to 'Back to all Dates holidays', holiday_dates_holidays_path(@dates_holiday) %>
 </p>
 <br>
 <p>
