--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -1,7 +1,7 @@
 <h1> Edit Holiday</h1>
 <%= render 'form' %>
 <p>
-  <%= link_to 'Back to all holidays', holiday_path %>
+  <%= link_to 'Back to all holidays', holidays_path %>
 </p><br>
 <!-- <ol>
   <%#= render @holiday.dates_holidays  %>
