--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -8,4 +8,5 @@
 </ol>
  -->
  <%= render 'dates_holidays/list_dates_holidays', holiday: @holiday  %>
+ <%= render 'companies_holidays/list_companies_holidays', holiday: @holiday  %>
 
