--- a/app/views/companies_holidays/_list_companies_holidays.html.erb
+++ b/app/views/companies_holidays/_list_companies_holidays.html.erb
@@ -1,7 +1,7 @@
-    <p> <%= link_to 'New Company Holiday', new_holiday_companies_holiday %> </p>
-      <%= render 'header_companies_holidays_list' %>
-    <br>
-  <br>
-<p>
-  <%= link_to 'Back to all Companies', companies_path %>
-</p>
+  <p> <%= link_to 'New Company Holiday', new_holiday_companies_holiday_path(holiday) %> </p>
+
+  <%= render 'companies_holidays/header_companies_holidays_list', companies_holidays: @companies_holidays %>
+
+  <p>
+    <%= link_to 'Back to all Companies', companies_path %>
+  </p>
