Corrected dates_holidays/_form

--- a/app/views/dates_holidays/index.html.erb
+++ b/app/views/dates_holidays/index.html.erb
@@ -1,7 +1,7 @@
   <div>
     <h1>Dates Holidays</h1>
 
-    <p> <%= link_to 'New Date Holiday', new_holiday_dates_holiday_path(holiday) %> </p>
+    <p> <%= link_to 'New Date Holiday', new_holiday_dates_holiday_path(@holiday) %> </p>
 
       <% if @dates_holidays.present? %>
         <table>
