--- a/app/views/dates_holidays/show.html.erb
+++ b/app/views/dates_holidays/show.html.erb
@@ -19,12 +19,12 @@
 </p>
 
   <%= link_to 'Edit Date holiday', edit_dates_holiday_path(@dates_holiday) %>
-
 <br>
 
 <p>
-  <%#= link_to 'Back to all Dates holidays', holiday_dates_holidays_path(@dates_holiday) %>
+  <%= link_to 'Back to all Dates holidays', holiday_dates_holidays_path(@dates_holiday) %>
 </p>
+
 <br>
 <p>
   <%= link_to 'Back to all Holidays', holidays_path %>
