--- a/app/views/dates_holidays/new.html.erb
+++ b/app/views/dates_holidays/new.html.erb
@@ -2,7 +2,7 @@
   <%= render 'form' %>
 <br>
 <p>
-  <%= link_to 'Back to all Dates holidays', holiday_dates_holidays_path(@dates_holiday.holiday) %>
+  <%= link_to 'Back to all Dates holidays', holiday_dates_holidays_path(@dates_holiday.holiday_id) %>
   <br>
   <%= link_to 'Back to all Holidays', holidays_path %>
 </p>
