add countries_holidays controller+views

--- a/app/views/dates_holidays/index.html.erb
+++ b/app/views/dates_holidays/index.html.erb
@@ -4,7 +4,7 @@
     <p>
 
       <%#= unless @holiday.nil? do  %>
-        <%= link_to 'New Date Holiday', dates_holidays_new_path %>
+        <%= link_to 'New Date Holiday', new_dates_holiday_path %>
       <%# end %>
         </p>
 
