--- a/app/views/dates_holidays/show.html.erb
+++ b/app/views/dates_holidays/show.html.erb
@@ -22,7 +22,9 @@
 <br>
 
 <p>
-  <%= link_to 'Back to all Dates holidays', holiday_dates_holidays_path(@dates_holiday) %>
+  <%= link_to "Back to all Dates for Holiday: #{@dates_holiday.holiday.name}" , holiday_dates_holidays_path(@dates_holiday.holiday_id) %>
+  <br>
+  <%= link_to 'Back to all Dates - Holiday links', dates_holidays_path %>
 </p>
 
 <br>
