--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -43,13 +43,13 @@
 
       <li class="nav-item active">
         <a class="nav-link" href="#">
-          Post Cards
+          <%= link_to 'Counries-Holidays', countries_holidays_path %>
         </a>
       </li>
 
-      <li class="nav-item active">
+    <!--   <li class="nav-item active">
         <a class="nav-link" href="#">Greeting Texts</a>
-      </li>
+     -->  </li>
 
 <!--        <li class="nav-item dropdown">-->
 <!--          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"> Pages <b class="caret"></b>-->
