add companies_people controller+views

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -2,7 +2,7 @@ body{
   min-width: 320px;
   font-size: 14px;
   font-family: 'Playfair Display', serif;
-  color: #626262;
+  color: green;
 }
 
 img{
@@ -11,7 +11,7 @@ img{
 }
 
 a{
-  color: #b4ad9e;
+  color: navy;
 }
 a:hover{
   color: #898377;
@@ -31,7 +31,7 @@ header .navbar-light{
 header .navbar-brand{
   font-family: 'Inconsolata', monospace;
   font-size: 30px;
-  color: #000;
+  color: blue;
   text-transform: uppercase;
 }
 header .nav-item{
