--- a/app/views/companies_holidays/edit.html.erb
+++ b/app/views/companies_holidays/edit.html.erb
@@ -3,6 +3,7 @@
 <p>
   <%= link_to 'Back to all companies holiday', companies_holiday_path %>
 </p><br>
-<p>
-  <%= link_to 'Back to all Holidays', holidays_path %>
+<!-- <p>
+  <%#= link_to 'Back to all Holidays', holidays_path %>
 </p>
+ -->
