--- a/app/views/companies_holidays/show.html.erb
+++ b/app/views/companies_holidays/show.html.erb
@@ -21,6 +21,7 @@
   <%= link_to 'Back to all Companies holidays', holiday_companies_holidays_path(@companies_holiday) %>
 </p>
 <br>
-<p>
-  <%= link_to 'Back to all Holidays', holidays_path %>
+<!-- <p>
+  <%#= link_to 'Back to all Holidays', holidays_path %>
 </p>
+ -->
