--- a/app/views/countries_holidays/show.html.erb
+++ b/app/views/countries_holidays/show.html.erb
@@ -24,6 +24,7 @@
   <%= link_to 'Back to all Countries - Holiday Links', holiday_countries_holidays_path(@countries_holiday) %>
 </p>
 <br>
-<p>
-  <%= link_to 'Back to all Holidays', holidays_path %>
+<!-- <p>
+  <%#= link_to 'Back to all Holidays', holidays_path %>
 </p>
+ -->
