--- a/app/views/dates_holidays/edit.html.erb
+++ b/app/views/dates_holidays/edit.html.erb
@@ -3,6 +3,7 @@
 <p>
   <%#= link_to 'Back to all dates holidays', holiday_dates_holidays_path %>
 </p><br>
-<p>
-  <%= link_to 'Back to all Holidays', holidays_path %>
+<!-- <p>
+  <%#= link_to 'Back to all Holidays', holidays_path %>
 </p>
+ -->
