--- a/app/views/dates_holidays/show.html.erb
+++ b/app/views/dates_holidays/show.html.erb
@@ -28,6 +28,7 @@
 </p>
 
 <br>
-<p>
-  <%= link_to 'Back to all Holidays', holidays_path %>
+<!-- <p>
+  <%#= link_to 'Back to all Holidays', holidays_path %>
 </p>
+ -->
