--- a/app/views/holidays/new.html.erb
+++ b/app/views/holidays/new.html.erb
@@ -2,6 +2,6 @@
 <%= render 'form' %>
 <br>
 <p>
-  <%= link_to 'Back to all holidays', holidays_path %>
+  <%= link_to 'Back to all Holidays', holidays_path %>
 </p>
 
