--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -11,6 +11,7 @@
 <%= link_to 'Edit holiday', edit_holiday_path(@holiday) %>
 
 <br>
-<p>
-  <%= link_to 'Back to all holidays', holidays_path %>
+<!-- <p>
+  <%#= link_to 'Back to all holidays', holidays_path %>
 </p>
+ -->
