--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -47,6 +47,13 @@
         </a>
       </li>
 
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%= link_to 'Companies-People', companies_people_path %>
+        </a>
+      </li>
+
+
     <!--   <li class="nav-item active">
         <a class="nav-link" href="#">Greeting Texts</a>
      -->  </li>
