--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,5 +1,5 @@
   <div>
-    <h1> Persons </h1>
+    <h1> People </h1>
 
     <p> <%= link_to 'New Person', new_person_path %> </p>
 
@@ -7,7 +7,7 @@
         <table>
           <thead>
             <tr>
-              <th> N record</th>
+              <th> N rec</th>
               <th> Name </th>
               <th> Email </th>
             </tr>
