--- a/app/views/companies_holidays/index.html.erb
+++ b/app/views/companies_holidays/index.html.erb
@@ -6,7 +6,7 @@
     <br>
   </div>
   <br>
-<p>
-  <%= link_to 'Back to all Holidays', holidays_path %>
+<!-- <p>
+  <%#= link_to 'Back to all Holidays', holidays_path %>
 </p>
-
+ -->
