--- a/app/views/dates_holidays/new.html.erb
+++ b/app/views/dates_holidays/new.html.erb
@@ -3,6 +3,7 @@
 <br>
 <p>
   <%= link_to 'Back to all Dates holidays', holiday_dates_holidays_path(@dates_holiday.holiday_id) %>
-  <br>
-  <%= link_to 'Back to all Holidays', holidays_path %>
+<!-- <p>
+  <%#= link_to 'Back to all Holidays', holidays_path %>
 </p>
+ -->
