--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -1,12 +1,9 @@
 <h1> Edit Holiday</h1>
 <%= render 'form' %>
 <p>
-  <%= link_to 'Back to all holidays', holidays_path %>
-</p><br>
-<!-- <ol>
-  <%#= render @holiday.dates_holidays  %>
-</ol>
- -->
+  <%= link_to 'Back to all Holidays', holidays_path %>
+</p>
+<br>
  <%= render 'dates_holidays/list_dates_holidays', holiday: @holiday  %>
  <%= render 'companies_holidays/list_companies_holidays', holiday: @holiday  %>
 
