--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -8,10 +8,10 @@
   <td>
     <%= company.country.name %>
   </td>
-  <td>
-    <%= link_to 'show', company_path(company) %>
+<!--   <td>
+    <%#= link_to 'show', company_path(company) %>
   </td>
-  <td>
+ -->  <td>
     <%= link_to 'edit', edit_company_path(company) %>
   </td>
   <td>
