--- a/app/views/companies_holidays/_companies_holiday.html.erb
+++ b/app/views/companies_holidays/_companies_holiday.html.erb
@@ -11,10 +11,10 @@
   <td>
     <%= companies_holiday.holiday.type.name %>
   </td>
-  <td>
-    <%= link_to 'show', companies_holiday_path(companies_holiday) %>
+<!--   <td>
+    <%#= link_to 'show', companies_holiday_path(companies_holiday) %>
   </td>
-  <td>
+ -->  <td>
     <%= link_to 'edit', edit_companies_holiday_path(companies_holiday) %>
   </td>
   <td>
