--- a/app/views/companies_people/_companies_person.html.erb
+++ b/app/views/companies_people/_companies_person.html.erb
@@ -8,10 +8,10 @@
   <td>
     <%= companies_person.person.name %>
   </td>
-  <td>
-    <%= link_to 'show', companies_person_path(companies_person) %>
+<!--   <td>
+    <%#= link_to 'show', companies_person_path(companies_person) %>
   </td>
-  <td>
+ -->  <td>
     <%= link_to 'edit', edit_companies_person_path(companies_person) %>
   </td>
   <td>
