--- a/app/views/countries/_country.html.erb
+++ b/app/views/countries/_country.html.erb
@@ -9,10 +9,10 @@
     <%= country.code %>
   </td>
 
-  <td>
-    <%= link_to 'show', country_path(country) %>
+<!--   <td>
+    <%#= link_to 'show', country_path(country) %>
   </td>
-
+ -->
   <td>
     <%= link_to 'edit', edit_country_path(country) %>
   </td>
