--- a/app/views/countries_holidays/_countries_holiday.html.erb
+++ b/app/views/countries_holidays/_countries_holiday.html.erb
@@ -14,10 +14,10 @@
   <td>
     <%= countries_holiday.holiday.type.name %>
   </td>
-  <td>
-    <%= link_to 'show', countries_holiday_path(countries_holiday) %>
+<!--   <td>
+    <%#= link_to 'show', countries_holiday_path(countries_holiday) %>
   </td>
-  <td>
+ -->  <td>
     <%= link_to 'edit', edit_countries_holiday_path(countries_holiday) %>
   </td>
   <td>
