--- a/app/views/dates_holidays/_dates_holiday.html.erb
+++ b/app/views/dates_holidays/_dates_holiday.html.erb
@@ -14,10 +14,10 @@
   <td>
     <%= dates_holiday.holiday.name %>
   </td>
-  <td>
-    <%= link_to 'show', dates_holiday_path(dates_holiday) %>
+<!--   <td>
+    <%#= link_to 'show', dates_holiday_path(dates_holiday) %>
   </td>
-  <td>
+ -->  <td>
     <%= link_to 'edit', edit_dates_holiday_path(dates_holiday) %>
   </td>
   <td>
