--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -49,10 +49,46 @@
 
       <li class="nav-item active">
         <a class="nav-link" href="#">
-          <%= link_to 'Companies-People', companies_people_path %>
+          <%= link_to 'People', people_path %>
         </a>
       </li>
 
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%= link_to 'Companies-People', companies_people_path %>
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%= link_to 'Mail Adresses', mail_addresses_path %>
+        </a>
+      </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%= link_to 'Reserved Item', mail_addresses_path %>
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%= link_to 'Reserved Item', mail_addresses_path %>
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%= link_to 'Reserved Item', mail_addresses_path %>
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%= link_to 'Reserved Item', mail_addresses_path %>
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%= link_to 'Reserved Item', mail_addresses_path %>
+        </a>
+      </li>
 
     <!--   <li class="nav-item active">
         <a class="nav-link" href="#">Greeting Texts</a>
