--- a/app/views/types/_type.html.erb
+++ b/app/views/types/_type.html.erb
@@ -6,10 +6,10 @@
     <%= type.name %>
   </td>
 
-  <td>
-    <%= link_to 'show', type_path(type) %>
+<!--   <td>
+    <%#= link_to 'show', type_path(type) %>
   </td>
-
+ -->
   <td>
     <%= link_to 'edit', edit_type_path(type) %>
   </td>
