--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -9,10 +9,10 @@
     <%= person.email %>
   </td>
 
-  <td>
-    <%= link_to 'show', person_path(person) %>
+<!--   <td>
+    <%#= link_to 'show', person_path(person) %>
   </td>
-
+ -->
   <td>
     <%= link_to 'edit', edit_person_path(person) %>
   </td>
