--- a/app/views/mail_addresses/index.html.erb
+++ b/app/views/mail_addresses/index.html.erb
@@ -9,7 +9,7 @@
             <tr>
               <th> N rec</th>
               <th> Name </th>
-              <th> Person </th>
+              <th> Person / Company</th>
             </tr>
           </thead>
           <%= render @mail_addresses %>
