--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -66,7 +66,7 @@
 
       <li class="nav-item active">
         <a class="nav-link" href="#">
-          <%= link_to 'Reserved Item', mail_addresses_path %>
+          <%= link_to 'Post Cards', postcards_path %>
         </a>
       </li>
       <li class="nav-item active">
