--- a/app/views/companies_holidays/_header_companies_holidays_list.html.erb
+++ b/app/views/companies_holidays/_header_companies_holidays_list.html.erb
@@ -1,6 +1,6 @@
       <% if @companies_holidays.present? %>
-        <table>
-          <thead>
+        <table class="table table-bordered">
+          <thead class="thead-light" align="center">
             <tr>
               <th> N record</th>
               <th> Company </th>
