--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -5,7 +5,7 @@
 
       <% if @types.present? %>
         <table>
-          <thead>
+          <thead class="thead-light" align="center">
             <tr>
               <th> N record</th>
               <th> Type name </th>
