--- a/app/views/companies_people/_header_companies_people_list.html.erb
+++ b/app/views/companies_people/_header_companies_people_list.html.erb
@@ -1,6 +1,6 @@
       <% if @companies_people.present? %>
-        <table>
-          <thead>
+        <table class="table table-bordered">
+          <thead class="thead-light" align="center">
             <tr>
               <th> N rec</th>
               <th> Company </th>
