--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -4,8 +4,8 @@
     <p> <%= link_to 'New Country', new_country_path %> </p>
 
       <% if @countries.present? %>
-        <table>
-          <thead>
+        <table class="table table-bordered">
+          <thead class="thead-light" align="center">
             <tr>
               <th> N record</th>
               <th> Country </th>
