--- a/app/views/countries_holidays/_header_countries_holidays_list.html.erb
+++ b/app/views/countries_holidays/_header_countries_holidays_list.html.erb
@@ -1,6 +1,6 @@
       <% if @countries_holidays.present? %>
-        <table>
-          <thead>
+        <table class="table table-bordered">
+          <thead class="thead-light" align="center">
             <tr>
               <th> # </th>
               <th> Country </th>
