--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -76,7 +76,7 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">
-          <%= link_to 'Reserved Item', mail_addresses_path %>
+          <%= link_to 'Emails', emails_path %>
         </a>
       </li>
       <li class="nav-item active">
