--- a/app/views/dates_holidays/_list_dates_holidays.html.erb
+++ b/app/views/dates_holidays/_list_dates_holidays.html.erb
@@ -1,4 +1,5 @@
-<p> <%= link_to 'New Date Holiday', new_holiday_dates_holiday_path(@dates_holidays) %> </p>
+<!-- <p> <%#= link_to 'New Date Holiday', new_holiday_dates_holiday_path(@dates_holidays) %> </p> -->
+<p> <%= link_to 'New Date Holiday', new_dates_holiday_path %> </p>
 
 <% if @dates_holidays.present? %>
   <table class="table table-bordered">
