--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -11,15 +11,15 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
 
-      <li>
-        <a class="nav-link active">
-          <%= link_to 'Holidays', holidays_path  %>
-        </a>
-      </li>
 
       <li class="nav-item active">
         <a class="nav-link">
-          <%= link_to 'Dates Holidays', dates_holidays_path %>
+          <%= link_to 'Calendar ', dates_holidays_path %>
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link active">
+          <%= link_to ' Holidays', holidays_path  %>
         </a>
       </li>
 
@@ -81,15 +81,15 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">
-          <%= link_to 'Reserved Item', mail_addresses_path %>
+          <%= link_to 'Types', types_path %>
         </a>
       </li>
-      <li class="nav-item active">
+  <!--     <li class="nav-item active">
         <a class="nav-link" href="#">
           <%= link_to 'Reserved Item', mail_addresses_path %>
         </a>
       </li>
-
+ -->
     <!--   <li class="nav-item active">
         <a class="nav-link" href="#">Greeting Texts</a>
      -->  </li>
