--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -9,6 +9,7 @@
             <tr>
               <th> N rec</th>
               <th> Name </th>
+              <th> Birthday </th>
               <th> Email </th>
             </tr>
           </thead>
