--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -6,6 +6,10 @@
     <%= person.name %>
   </td>
   <td>
+    <%= person.birthday_index %>
+    <%#= date_field(:person, :birthday ) %>
+  </td>
+  <td>
     <%= person.email %>
   </td>
 
