--- a/app/views/postcards/_postcard.html.erb
+++ b/app/views/postcards/_postcard.html.erb
@@ -7,7 +7,7 @@
   </td>
 
   <td class="text-center">
-    <%#= postcard_image(postcard) %>
+     <%= image_tag postcard.image.url(:small) %>
   </td>
 
   <td>
