--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -1,17 +1,17 @@
-<h2> Holiday Show </h2>
+<h2> Email Show </h2>
 <p>
-  id: <%= @holiday.id %>
+  id: <%= @email.id %>
 </p>
 
 <p>
-  Name holiday:
-  <%= @holiday.name %>
+  Name :
+  <%= @email.name %>
 </p>
 
-<%= link_to 'Edit holiday', edit_holiday_path(@holiday) %>
+<%= link_to 'Edit email', edit_email_path(@email) %>
 
 <br>
 <!-- <p>
-  <%#= link_to 'Back to all holidays', holidays_path %>
+  <%#= link_to 'Back to all emails', emails_path %>
 </p>
  -->
