--- a/app/views/cardtexts/show.html.erb
+++ b/app/views/cardtexts/show.html.erb
@@ -17,5 +17,5 @@
 <br>
 
 <p>
-  <%= link_to 'Back to all Card texts', cardtexts_path %>
+  <%= link_to 'Back to all Card texts', cardtexts_path %> <br>
 </p>
