--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -11,6 +11,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
 
+      <li class="nav-item active">
+        <a class="nav-link">
+          <%= link_to 'Dashboard ', rails_admin_path %>
+        </a>
+      </li>
 
       <li class="nav-item active">
         <a class="nav-link">
