--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -13,7 +13,7 @@
 
       <li class="nav-item active">
         <a class="nav-link">
-          <%= link_to 'Dashboard ', rails_admin_path %>
+          <%= link_to 'ADMIN DASHBOARD ', rails_admin_path %>
         </a>
       </li>
 
@@ -25,6 +25,11 @@
       <li class="nav-item active">
         <a class="nav-link active">
           <%= link_to ' Holidays', holidays_path  %>
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <%= link_to 'Holidays Types', types_path %>
         </a>
       </li>
 
@@ -82,11 +87,6 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">
           <%= link_to 'Emails', emails_path %>
-        </a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">
-          <%= link_to 'Types', types_path %>
         </a>
       </li>
   <!--     <li class="nav-item active">
