fix errors mailer

--- a/app/views/greetings_mailer/send_message.html.erb
+++ b/app/views/greetings_mailer/send_message.html.erb
@@ -1,4 +1,7 @@
 <h1>
-Hi, <%= @name %>
-<%= greetings_text %>
+Hi, <%= @name %><br>
 </h1>
+<h2><%= @greetings_text %></h2>
+<%#= image_tag :attachments['Postcard'] %>
+
+
