Emails list modify, Add EmailsTexts+EmailsCards controllers

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,4 +1,5 @@
 .s_e_d{ width:50.0pt;  border-collapse:collapse; text-align:center; }
+.checkit{ width:50.0pt; border-collapse:collapse; text-align:center; color: red; }
 
 .celltab10{ width:10.0pt; border:solid black 1.0pt; text-align:center; }
 .celltab10center{ width:10.0pt; border:solid black 1.0pt; text-align:center; }
