--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -11,7 +11,9 @@
           <th > N </th>
           <th > Name </th>
           <th > Address </th>
-          <th > Mail Address </th>
+          <th > Company Mail Address </th>
+          <!-- <th > Checked  </th> -->
+          <th > Sent date </th>
         </tr>
        </thead>
           <%= render @emails %>
