--- a/app/views/navbar/_nav.html.erb
+++ b/app/views/navbar/_nav.html.erb
@@ -84,6 +84,11 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">
+          <%= link_to 'Emails - Cards', email_cards_path %>
+        </a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
           <%= link_to 'Card Texts', cardtexts_path %>
         </a>
       </li>
